# metachat

./: .gitattributes  .gitignore  design_gen.py  fish_repo.json  repo_check.html  tmp_content_browser_client.h  tmp_rph_impl.cc
browser/: .gitignore  LICENSE  README.md  UPSTREAM_REVISION  apply.sh  verify-patches.cmd
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
desktop/src-tauri/src/audio/: mod.rs  recorder.rs  stt.rs
desktop/src-tauri/src/cloak/: cdp_client.rs  config.rs  fingerprint.rs  injector.rs  instance.rs  job.rs  mod.rs  pool.rs  position.rs  process.rs  window_embed.old.rs
desktop/src-tauri/src/commands/: account.rs  browser.rs  contact.rs  message.rs  mod.rs  session.rs  storage.rs  sync.rs  translation.rs
desktop/src-tauri/src/mqtt/: client.rs  handler.rs  mod.rs
desktop/src-tauri/src/protocol/: facebook.rs  line.rs  mod.rs  telegram.rs  types.rs  whatsapp.rs
desktop/src-tauri/src/storage/: account.rs  contact.rs  message.rs  migrate.rs  mod.rs  models.rs  ops.rs  reply.rs  schema.rs  session.rs  settings.rs
desktop/src-tauri/src/sync/: downloader.rs  mod.rs  uploader.rs
desktop/src-tauri/src/translation/: cache.rs  deepl.rs  google.rs  mod.rs  openai.rs
docs/: 00-架构设计总览.md  01-UI设计方案-MetaChat.md  01-需求规格说明书.md  02-性能架构设计-MetaChat.md  02-概要设计说明书.md  03-指纹模板系统设计.md  03-详细设计说明书.md  04-CloakBrowser分发方案.md  (+19 more)
(+86 files in other folders)
