[package]
name = "metachat"
version = "0.1.0"
edition = "2021"
description = "MetaChat - Multi-platform social messaging aggregator"

[package.metadata]
tauri-winres = {}

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rumqttc = "0.24"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
dirs = "5"
base64 = "0.22"
hex = "0.4"
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "metachat"
path = "src/main.rs"
